--- a/client/index.html
+++ b/client/index.html
@@ -59,9 +59,9 @@
 				<!-- Two -->
 			<section id="two" ng-if="showCharInfo">
 				<div>
-					<div ng-if="char.thumb" class="thumbnail"><img src="{{char.thumb}}"></div>
-					<div class="charName"><h1><strong>{{char.name}}</strong></h1></div>
-					<div class="charDesc">{{char.desc}}</div>
+					<div ng-if="char.thumb" class="img"><img src="{{char.thumb}}"></div>
+					<div ><h1><strong>{{char.name}}</strong></h1></div>
+					<div >{{char.desc}}</div>
 					</div>
 
 				<div ng-if="showCharInfo">
