--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,9 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="images/favicon.ico"/>
 
-		<script data-require="angular.js@1.2.x" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js" data-semver="1.2.17"></script>
+		<script data-require="angular.js@1.8.x" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js" data-semver="1.8.2"></script>
+
+		<!-- <script data-require="angular.js@1.2.x" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js" data-semver="1.2.17"></script> -->
 		<script data-require="jquery@*" data-semver="2.1.1" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.11.2.js"></script>
 		<script data-require="bootstrap@*" data-semver="3.1.1" src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
@@ -53,7 +55,6 @@
 						>
 						<i ng-show="loadingCharacters" class="glyphicon glyphicon-refresh"></i>
 						<button class="btn" onclick="clearField()" ng-click="clearField()">Clear Result</button>
-						<!-- <button class="btn btn1" onclick="clearField()" ng-click="clearField()">Clear</button> -->
 				</header>
 			</section>
 
