--- a/client/index.html
+++ b/client/index.html
@@ -22,14 +22,19 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/logo-marvel-comics.png" alt="Marvel Image" /></a>
-					<h1><strong>Hi! I am Carolina</strong>.<br />
-						This is a web application to search for Marvel Characters.<br /><br/>
-
-						Instructions:<br/>
-
-						1. Type of the name in Search field.<br/>
-						2. Click on the chosen name.
+					<h1>
+						<strong>Hey! I'm Carolina and I am a web developer.</strong><br />
 					</h1>
+					<p>Visit my Github at the bottom of this page, if you want to know more my projects and use some 
+						that are open to study or improve your project.
+					</p>
+					<p>This is a web page with the purpose of searching Marvel characters and showing the list of comics already 
+						published for each of them.
+					</p>
+					<p>How to use:<br/>
+						1. Type of the name in Search field.<br/>
+						2. Click on the chosen name.<br/>
+					</p>
 				</div>
 			</header>
 
@@ -44,7 +49,7 @@
 							id="searchField"
 							type="text"
 							ng-model="asyncSelected"
-							placeholder="Search for you character"
+							placeholder="Type the character name"
 							typeahead="characters for characters in getCharacters($viewValue)"
 							typeahead-loading="loadingCharacters" 
 							typeahead-on-select="selectCharacter($item);asyncSelected=''"
@@ -94,7 +99,8 @@
 						<li><a href="mailto:carol_sauhi@hotmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Marvel</li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
+						<li>&copy; <a href="https://developer.marvel.com/" target="_blank">Marvel</a></li>
+						<li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
