Updated structure code

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		<script data-require="jquery@*" data-semver="2.1.1" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.11.2.js"></script>
 		<script data-require="bootstrap@*" data-semver="3.1.1" src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-		<script data-require="angular-route@*" data-semver="1.2.16" src="https://code.angularjs.org/1.2.16/angular-route.js"></script>    <script src="app.js"></script>	
+		<script data-require="angular-route@*" data-semver="1.2.16" src="https://code.angularjs.org/1.2.16/angular-route.js"></script>    
+		<script src="/client/app.js"></script>	
 	
 	</head>
 	<body class="is-preload" ng-controller="MainCtrl">
